# agentic-3rd-line-support

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  cloudbuild.yaml  gha-creds-aa447f53764a638b.json
.github/: CODEOWNERS
.github/workflows/: gemini.yml
agents/coding-agent/: README.md
agents/monitoring-agent/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
agents/monitoring-agent/app/: __init__.py  agent.py  config.py  grounding.py  health.py  main.py  models.py  tools.py
agents/triage-agent/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
agents/triage-agent/app/: __init__.py  agent.py  config.py  grounding.py  main.py  models.py  store.py  tools.py
apps/synthetic-shop/: Cargo.toml  Dockerfile  README.md
apps/synthetic-shop/src/: events.rs  inventory.rs  main.rs
docs/: architecture.md  article.md  business-value.md  setup.md  terraform.md
grounding/: README.md  risky-patterns.md  runbooks.md  service-catalog.md  severity-rubric.md
terraform/: apis.tf  cloud_run.tf  cloudbuild.tf  firestore.tf  iam.tf  logging.tf  monitoring.tf  outputs.tf  providers.tf  pubsub.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  workload_identity.tf
terraform/modules/agent-service/: main.tf  outputs.tf  variables.tf
ticket-system/: .dockerignore  Cargo.toml  Dockerfile  README.md
ticket-system/backend/: Cargo.toml
ticket-system/backend/src/: admin.rs  agents.rs  auth.rs  config.rs  error.rs  firestore.rs  github.rs  handlers.rs  main.rs  ops.rs  state.rs  webhook.rs
ticket-system/shared/: Cargo.toml
ticket-system/shared/src/: lib.rs
ticket-system/ui/: Cargo.toml  Trunk.toml  index.html
ticket-system/ui/src/: main.rs
