# Workspace so backend + ui share the `shared` types crate.
[workspace]
resolver = "2"
members = ["shared", "backend", "ui"]
# `ui` is wasm-only (Leptos CSR); check it with:
#   cargo check --target wasm32-unknown-unknown -p ticket-ui
# so bare `cargo check`/`build`/`clippy` (host) only touch the server crates.
default-members = ["shared", "backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
