[package]
name = "ticket-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Console backend: consumes the tickets topic, stores in Firestore, serves the UI, opens GitHub Issues."

[dependencies]
ticket-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[lints.clippy]
all = "deny"
unwrap_used = "deny"
panic = "deny"

[lints.rust]
unsafe_code = "forbid"
