[package]
name = "ticket-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leptos + WASM console UI. Built with trunk; static bundle served by the backend."

[dependencies]
ticket-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
leptos = { version = "0.8", features = ["csr"] }
gloo-net = { version = "0.6", features = ["json"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
